# slick-core

./: .flake8  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/slickcore/: __init__.py
tests/slickcore/imports/: test_imports.py
tests/slickcore/logging/: test_logger.py
tests/slickcore/version/: test_version.py
